--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			</div>
 
 			<div class="copy">
-				<h2 class="h2">&copy; CodyPro &copy;</h2>
+				<h2 class="h2">&copy; DEIVYS LAREZ &copy;</h2>
 			</div>
 		</div>
 	</div>
